--- a/styles.css
+++ b/styles.css
@@ -211,6 +211,7 @@ li {
   color: var(--light-text-color);
   padding: 40px;
   text-align: center;
+  margin-top: 1.5em;
 }
 
 #footer .section::first-letter {
